--- a/css/example.css
+++ b/css/example.css
@@ -66,9 +66,17 @@ nav {
 	font-family: "Pontano Sans" sans-serif;
 }
 
+footer {
+	font-family: "Pontano Sans" sans-serif;
+	font-weight: 100;
+	color: seagreen;
+/*	background-color: whitesmoke;*/
+	max-width: 800px;
+	margin: auto;
 img {
 	max-width: 300px;
 }
+
 
 .lead-img {
 	display: flex;
@@ -83,4 +91,8 @@ img {
 
 body {
 	background-color: lightpink;
+}
+
+footer a {
+	color: darkcyan;
 }
