--- a/css/example.css
+++ b/css/example.css
@@ -77,6 +77,11 @@ img {
 	max-width: 300px;
 }
 
+.mailing-link img {
+	display: flex;
+	border-radius: 5rem;
+	max-width: 400px;
+	justify-content: center;
 
 .lead-img {
 	display: flex;
