--- a/css/list.css
+++ b/css/list.css
@@ -32,6 +32,74 @@
 
 }
 
+.skip-link {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  border: 0;
+}
+
+.skip-link:focus{
+  width: unset;
+  height: unset;
+  position: relative;
+  padding: unset;
+  margin: unset;
+  font-size: 2rem;
+}
+
+.anchor-nav {
+	display: flex;
+	position: sticky;
+	top: 10px;
+	justify-content: space-evenly;
+	width: 80%;
+	background-color: teal;
+	margin: auto;
+	padding: 0.5rem;
+	color: #FFE3AA;
+	text-transform: uppercase;
+	border-radius: 1rem;
+
+}
+
+.anchor-nav a {
+	color: #ffe3aa;
+}
+
+.roboto-serif-<uniquifier> {
+  font-family: "Roboto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "GRAD" 0;
+}
+
+.pontano-sans-<uniquifier> {
+  font-family: "Pontano Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+.dm-serif display-regular {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.dm-serif display-regular-italic {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+
 .anchor-nav a {
 	color:#6699CC;
 }
@@ -40,3 +108,48 @@ body {
 	background-color: #B0C4DE(229, 172, 103, 0.5);
 	overflow: scroll; /* Show scrollbars */
 }
+nav {
+
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: ;
+}
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="list.html">Books</a></li>
+  <li><a href="restuarant.html">Food</a></li>
+</ul>
+
+body {
+	background-color: lightpink;
+	scrollbar-color: #9c7171;
+ 	 scrollbar-width: thin;
+	/*	background: #FFB6C1;*/
+	background: linear-gradient(#FFB6C1, #FFB6C1);
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	font-family: "Pontano Sans", sans-serif;
+/*	max-width: 900px;*/
+}
+
+main {
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	text-align: center;
+
+}
+
+
+body section .lead-image {
+	display: flex;
+	justify-content: center;
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+
