--- a/css/list.css
+++ b/css/list.css
@@ -16,41 +16,6 @@
   margin: unset;
   font-size: 2rem;
 }
-
-.anchor-nav {
-	display: flex;
-	position: sticky;
-	top: 10px;
-	justify-content: space-evenly;
-	width: 80%;
-	background-color: blue-gray;
-	margin: auto;
-	padding: 0.5rem;
-	color: #6699CC;
-	text-transform: uppercase;
-	border-radius: 1rem;
-
-}
-
-.skip-link {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  border: 0;
-}
-
-.skip-link:focus{
-  width: unset;
-  height: unset;
-  position: relative;
-  padding: unset;
-  margin: unset;
-  font-size: 2rem;
-}
-
 .anchor-nav {
 	display: flex;
 	position: sticky;
@@ -70,44 +35,6 @@
 	color: #ffe3aa;
 }
 
-.roboto-serif-<uniquifier> {
-  font-family: "Roboto Serif", serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100,
-    "GRAD" 0;
-}
-
-.pontano-sans-<uniquifier> {
-  font-family: "Pontano Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}
-
-.dm-serif display-regular {
-  font-family: "DM Serif Display", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.dm-serif display-regular-italic {
-  font-family: "DM Serif Display", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-
-.anchor-nav a {
-	color:#6699CC;
-}
-
-body {
-	background-color: #B0C4DE(229, 172, 103, 0.5);
-	overflow: scroll; /* Show scrollbars */
-}
 nav {
 
 	display: flex;
@@ -117,24 +44,74 @@ nav {
 	font-family: ;
 }
 
+nav a {
+		font-family: "Oswald", sans-serif;
+		text-align: center;
+		text-decoration: none;
+		justify-content: center;
+/*		width: 100%;*/
+		padding: 0.2rem;
+		margin: 0.1rem;
+		background: #ce9c9c	;
+		border-radius: 0.1rem;
+		border: 1px solid #ce9c9c	;
+		color: #8b6767;
+	}
+
+nav a:visited {
+	color: #9c7171;
+}
+
+nav a:hover {
+	color: #8b6767;
+	background-color: #ba8888;
+}
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: ; /* Background color of the menu */
+    }
+
+    li {
+/*      float: left; /* Display list items horizontally */*/
+    }
+
+    li a {
+      display: flex;
+      flex-flow: column;
+      color: white;
+      text-align: center;
+      padding: 14px 16px; /* Padding around each link */
+      text-decoration: none;
+    }
+
+    li a:hover {
+      background-color: #111; /* Background color on hover */
+    }
+
 <ul>
   <li><a href="index.html">Home</a></li>
+  <li><a href="restaurant.html">Food</a></li>
   <li><a href="list.html">Books</a></li>
-  <li><a href="restuarant.html">Food</a></li>
 </ul>
 
 body {
-	background-color: lightpink;
-	scrollbar-color: #9c7171;
- 	 scrollbar-width: thin;
-	/*	background: #FFB6C1;*/
-	background: linear-gradient(#FFB6C1, #FFB6C1);
+	 scrollbar-color: #9c7171;
+  scrollbar-width: thin;
+/*	background: #faf0e6;*/
+	background: linear-gradient(#faf0e6, #eed9c4);
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	font-family: "Pontano Sans", sans-serif;
+	font-family: "Ojoju", sans-serif;
 /*	max-width: 900px;*/
 }
+ section {
+
+ 	margin: 0 rem;
+ }
 
 main {
 	display: flex;
@@ -152,4 +129,355 @@ body section .lead-image {
 	margin-right: 1rem;
 }
 
+title {
 
+}
+
+h1 {
+	display: flex;
+	justify-content: center;
+	font-family: "Roboto Condensed", sans-serif;
+	font-size: 4rem;
+	color: #3b2008
+	
+}
+
+.lead-image {
+	display: flex;
+	justify-content: center;
+
+}
+
+.lead-image img {
+	margin: 0 auto;
+	object-fit: contain;
+	max-width: 100%;
+}
+.lead {
+margin: auto;
+display: flex;
+
+}
+p {
+	font-family: "Ojoju", sans-serif;
+	font-size: 1.2rem;
+	color: #5e503f;
+}
+
+li {
+	font-family: ;
+	font-size: 1rem;
+	color: red;
+}
+
+img {
+	max-width: 50%;
+	padding: 5px;
+	margin: 2px;
+ justify-content: center;
+
+}
+
+body img {
+	justify-content: center;
+/*	max-width: 5rem;*/
+
+}
+
+a:link {
+	color: #5e503f;
+}
+
+
+#test {
+	text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}
+
+.text-highlight {
+	background: #A9BA9D;
+/*	color: #c4c4ff;*/
+	color: lightcyan;
+	padding-left: 1rem;
+}
+
+
+
+/*Classes start*/
+
+.shadow {
+	text-shadow: 10px 1px 2px orangered;	
+}
+
+.copyright {
+	font-size: 0.9rem;
+}
+
+.flex-example {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 10px;
+  gap: 10px 20px; /* row-gap column gap */
+  row-gap: 10px;
+  column-gap: 10px;
+}
+
+.blue {
+	padding: 1rem;
+	min-width: 50px;
+	min-height: 50px;
+	background: blueviolet;
+	border: 5px solid darkred;
+}
+
+.red {
+	padding: 1rem;
+	min-width: 50px;
+	min-height: 50px;
+	background: darkcyan;
+	border: 5px dotted darkgreen;
+}
+
+.green {
+	padding: 1rem;
+		min-width: 50px;
+	min-height: 50px;
+	background: seagreen;
+	border: 5px solid mediumpurple; 
+}
+
+.orange {
+	padding: 1rem;
+		min-width: 50px;
+	min-height: 50px;
+	background: lightcoral;
+	border: 5px dotted darkorange;
+}
+
+footer a {
+	color: #3b2008;
+}
+
+.gallery-example {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+
+
+
+
+.button_holder {
+	display: flex;
+	flex-direction: row;
+}
+
+button_next {  }
+button_previous {  }
+
+.stepper {  }
+
+button {
+	background-color: #C4A484;
+	margin: 1rem;
+	padding: 1rem;
+	min-width: 10rem;
+	font-size: 1.2rem;
+	border-radius: 0.5rem;
+}
+
+.button-start {
+/*	background-color: forestgreen;*/
+}
+
+.gallery-image {
+	max-width: 80%;
+
+}
+
+.gallery-image img {
+	width: 100%;
+}
+
+.hideThis {
+	display: none;
+/*	background-color: orange;*/
+}
+example-image {
+	display: flex;
+	flex-direction: column;
+	margin: 3rem;
+
+}
+
+.example-image img {
+	display: flex;
+  	max-width:230px;
+  	max-height:95px;
+ 	width: auto;
+  	height: auto;
+  	margin: 1rem;
+}
+
+.listings2 {
+	display: flex;
+	flex-wrap: wrap;
+}
+.list-item {
+	display: flex;
+	flex-flow: column;
+/*	flex-wrap: wrap;*/
+	border-radius: 3px;
+/*	max-width: 300px;*/
+}
+
+.list-item img {
+
+	max-width: 300px;
+}
+/*@media {}*/
+
+/*\{
+  // Styles for viewports wider than 400 pixels.
+	200px
+	576px 
+	768px
+	992px
+	1200px
+}
+*/
+@media (max-width:200px) {
+	body {
+		background: #faf0e6;
+	}
+	img {
+		max-width: 100%;
+	}
+
+}
+
+@media (min-width: 201px) and (max-width:575px) {
+	body {
+		
+		background: #faf0e6;
+
+	}
+
+	p {
+		color: #00563B;
+	}
+	nav {
+		display: flex;
+		flex-direction: column;
+		
+
+/*		padding: 1rem;*/
+		margin: 0.2rem;
+		margin-right: 1rem;
+		margin-left: 1rem;
+	}
+
+	nav a {
+		font-family: "Oswald", sans-serif;
+		text-align: center;
+		text-decoration: none;
+		justify-content: center;
+		width: 100%;
+		padding: 0.2rem;
+		margin: 0.1rem;
+		background: #A9BA9D;
+		border-radius: 0.1rem;
+		border: 1px solid #00693E;
+		color: #679267;
+	}
+
+nav a:visited {
+	color: #679267;
+	
+}
+
+nav a:link {
+	color: #679267;
+
+}
+
+
+
+	main {
+	display: flex;
+	flex-direction: column;
+}
+section {
+	margin-top: 1rem;
+}
+
+
+	h1 {
+		font-size: 2rem;
+		background: #A9BA9D;
+		color: #00563B;
+		text-align: center;
+	}
+	img {
+
+	}
+
+	.lead-image {
+	display: flex;
+	justify-content: center;
+	max-width: 95%;
+}
+
+.lead-image img {
+	margin: 0 auto;
+	object-fit: contain;
+	max-width: 100%;
+	border: none;
+	border-radius: 15rem;
+}
+
+a:link {
+	color: #e9e9e9;
+}
+a:visited {
+	color: #d6d6d6;
+}
+
+a:hover {
+	color: purple;
+}
+
+ol li {
+	color: lightgray; !important;
+}
+
+ul {
+	list-style-type: none;
+}
+
+.list45 {
+	font-size: 5rem;
+}
+
+}
+
+@media (min-width: 576px) and (max-width:768px) {
+	body {
+		background: linear-gradient(#faf0e6, #eed9c4);
+	}
+}
+
+
+@media (min-width: 769px) and (max-width:1000px) {
+	body {
+		background: #faf0e6;
+	}
+}
+
+@media (min-width: 1001px)  {
+ 	body {
+ 		background: ##faf0e6;
+	}
+}
